--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -7,10 +7,12 @@
             </div>
             
             <nav class="header__nav">
+                <a href="#about" class="nav-link">О компании</a>
+                <a href="#team" class="nav-link">Команда</a>
                 <a href="#services" class="nav-link">Услуги</a>
                 <a href="#objects" class="nav-link">Объекты</a>
-                <a href="#articles" class="nav-link">Вопросы</a>
-                <a href="#contacts" class="nav-link">Контакты</a>
+                <a href="#articles" class="nav-link">Статьи</a>
+                <a href="#contact-form" class="nav-link">Контакты</a>
             </nav>
             
             <div class="header__contacts">
@@ -45,10 +47,12 @@
 <!-- Mobile Menu -->
 <div class="mobile-menu">
     <nav class="mobile-menu__nav">
+        <a href="#about" class="nav-link">О компании</a>
+        <a href="#team" class="nav-link">Команда</a>
         <a href="#services" class="nav-link">Услуги</a>
         <a href="#objects" class="nav-link">Объекты</a>
-        <a href="#articles" class="nav-link">Вопросы</a>
-        <a href="#contacts" class="nav-link">Контакты</a>
+        <a href="#articles" class="nav-link">Статьи</a>
+        <a href="#contact-form" class="nav-link">Контакты</a>
     </nav>
     
     <div class="mobile-menu__contacts">
