--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -70,10 +70,9 @@
                 <a href="#">Пользовательское соглашение</a>
             </div>
             <div class="footer__social">
-                <a href="#" class="social-icon" aria-label="VKontakte">VK</a>
+                <a href="https://vk.com/burokvartir" target="_blank" rel="noopener noreferrer" class="social-icon" aria-label="VKontakte">VK</a>
                 <a href="#" class="social-icon" aria-label="Odnoklassniki">OK</a>
                 <a href="#" class="social-icon" aria-label="Instagram">IG</a>
-                <a href="#" class="social-icon" aria-label="Telegram">TG</a>
             </div>
         </div>
     </div>
