--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -21,12 +21,7 @@
                     <a href="mailto:burokvartir@mail.ru" class="contact-email">burokvartir@mail.ru</a>
                 </div>
                 <div class="header__social">
-                    <a href="#" class="social-link" aria-label="Telegram">
-                        <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
-                            <path d="M12 0C5.373 0 0 5.373 0 12s5.373 12 12 12 12-5.373 12-12S18.627 0 12 0zm5.894 8.221l-1.97 9.28c-.145.658-.537.818-1.084.508l-3-2.21-1.446 1.394c-.14.18-.357.295-.6.295-.002 0-.003 0-.005 0l.213-3.054 5.56-5.022c.24-.213-.054-.334-.373-.12l-6.869 4.326-2.96-.924c-.64-.203-.658-.64.135-.954l11.566-4.458c.538-.196 1.006.128.832.941z"/>
-                        </svg>
-                    </a>
-                    <a href="#" class="social-link" aria-label="VKontakte">
+                    <a href="https://vk.com/burokvartir" target="_blank" rel="noopener noreferrer" class="social-link" aria-label="VKontakte">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
                             <path d="M12.785 16.241s.287-.029.434-.18c.135-.138.131-.395.131-.395s-.019-1.277.58-1.465c.592-.188 1.352.924 2.155 1.333.605.308 1.064.24 1.064.24l2.145-.031s1.118-.069.587-.95c-.044-.07-.308-.64-1.585-1.81-1.34-1.23-1.16-.515.453-1.577.983-.651 1.377-1.048 1.253-1.214-.118-.16-.847-.118-.847-.118l-2.188.013s-.162-.023-.282.05c-.118.07-.193.232-.193.232s-.347.925-.805 1.714c-.97 1.64-1.358 1.728-1.517 1.626-.367-.238-.275-.956-.275-1.468 0-1.595.241-2.26-.47-2.43-.237-.056-.411-.093-1.017-.099-.778-.007-1.432.002-1.804.188-.247.123-.437.396-.321.412.144.021.469.088.639.323.225.305.217.99.217.99s.129 1.92-.299 2.157c-.295.163-.7-.17-1.57-1.71-.445-.98-.781-2.06-.781-2.06s-.065-.2-.18-.308c-.14-.135-.336-.178-.336-.178l-2.085.013s-.313.009-.428.15c-.102.125-.008.384-.008.384s1.63 3.83 3.473 5.76c1.69 1.78 3.625 1.664 3.625 1.664h.857z"/>
                         </svg>
@@ -61,12 +56,7 @@
     </div>
     
     <div class="mobile-menu__social">
-        <a href="#" class="social-link" aria-label="Telegram">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
-                <path d="M12 0C5.373 0 0 5.373 0 12s5.373 12 12 12 12-5.373 12-12S18.627 0 12 0zm5.894 8.221l-1.97 9.28c-.145.658-.537.818-1.084.508l-3-2.21-1.446 1.394c-.14.18-.357.295-.6.295-.002 0-.003 0-.005 0l.213-3.054 5.56-5.022c.24-.213-.054-.334-.373-.12l-6.869 4.326-2.96-.924c-.64-.203-.658-.64.135-.954l11.566-4.458c.538-.196 1.006.128.832.941z"/>
-            </svg>
-        </a>
-        <a href="#" class="social-link" aria-label="VKontakte">
+        <a href="https://vk.com/burokvartir" target="_blank" rel="noopener noreferrer" class="social-link" aria-label="VKontakte">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
                 <path d="M12.785 16.241s.287-.029.434-.18c.135-.138.131-.395.131-.395s-.019-1.277.58-1.465c.592-.188 1.352.924 2.155 1.333.605.308 1.064.24 1.064.24l2.145-.031s1.118-.069.587-.95c-.044-.07-.308-.64-1.585-1.81-1.34-1.23-1.16-.515.453-1.577.983-.651 1.377-1.048 1.253-1.214-.118-.16-.847-.118-.847-.118l-2.188.013s-.162-.023-.282.05c-.118.07-.193.232-.193.232s-.347.925-.805 1.714c-.97 1.64-1.358 1.728-1.517 1.626-.367-.238-.275-.956-.275-1.468 0-1.595.241-2.26-.47-2.43-.237-.056-.411-.093-1.017-.099-.778-.007-1.432.002-1.804.188-.247.123-.437.396-.321.412.144.021.469.088.639.323.225.305.217.99.217.99s.129 1.92-.299 2.157c-.295.163-.7-.17-1.57-1.71-.445-.98-.781-2.06-.781-2.06s-.065-.2-.18-.308c-.14-.135-.336-.178-.336-.178l-2.085.013s-.313.009-.428.15c-.102.125-.008.384-.008.384s1.63 3.83 3.473 5.76c1.69 1.78 3.625 1.664 3.625 1.664h.857z"/>
             </svg>
