--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -37,21 +37,29 @@
                 <div class="footer__column">
                     <h3 class="footer__title">Наши контакты</h3>
                     <ul class="footer__list">
-                        <li>г. Петрозаводск, пр. Ленина, 20, офис 304.</li>
+                        <li>пр. Ленина, д.16</li>
                         <li>
-                            <a href="tel:+78142562298" class="footer__contact-link">
+                            <a href="tel:+78142670606" class="footer__contact-link">
                                 <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
                                     <path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"/>
                                 </svg>
-                                +7 (8142) 56-22-98
+                                +7 (814) 267-06-06
                             </a>
                         </li>
                         <li>
-                            <a href="mailto:info@burokvartir.ru" class="footer__contact-link">
+                            <a href="tel:+78142670606" class="footer__contact-link">
+                                <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
+                                    <path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"/>
+                                </svg>
+                                +7 (911) 400-56-33
+                            </a>
+                        </li>
+                        <li>
+                            <a href="mailto:burokvartir@mail.ru" class="footer__contact-link">
                                 <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
                                     <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
                                 </svg>
-                                info@burokvartir.ru
+                                burokvartir@mail.ru
                             </a>
                         </li>
                     </ul>
